# AnvieUtils

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Include/Anvie/: BitManipulation.h  Error.h  HelperDefines.h  README.md  TerminalColors.h  Types.h
Include/Anvie/Allocators/: BlockAllocator.h
Include/Anvie/Bit/: Align.h  Arithmetic.h  Bit.h  Mask.h  Operators.h  README.md
Include/Anvie/Chrono/: Time.h
Include/Anvie/Containers/: 3  BitVector.h  Common.h  DenseMap.h  HashMap.h  List.h  README.md  SparseMap.h  String.h  StringBuffer.h  Tree.h  Vector.h  VectorInterface.h
Include/Anvie/Containers/Docs/: BitVector.md  DenseMap.md  SparseMap.md  Vector.md
Include/Anvie/Containers/Interface/: Common.h  DenseMap.h  SparseMap.h  SparseMapI.h  Tree.h  Vector.h
Include/Anvie/Maths/: Entropy.h  Matrix4f.h  Vector2f.h  Vector3f.h  Vector4f.h
Include/Anvie/Simd/: ComparisionOps.h  LoadStoreOps.h  Simd.h  Types.h
Include/Anvie/Simd/Impl/: ComparisionOps.h  LoadStoreOps.h
Include/Anvie/Test/: UnitTest.h
Source/: CMakeLists.txt  Error.c
Source/Allocators/: CMakeLists.txt  LinBlockAllocator.c
Source/Containers/: BitVector.c  CMakeLists.txt  Common.c  DenseMap.c  HashMap.c  SparseMap.c  String.c  StringBuffer.c  Tree.c  Vector.c
Source/Maths/: CMakeLists.txt  Entropy.c  Matrix4f.c  Vector2f.c  Vector3f.c  Vector4f.c
Source/Tests/: CMakeLists.txt  IntegerVector.c  StructVector.c  UnitTest.c
Source/Tests/Containers/: ImportUnitTests.h
Source/Tests/Containers/BitVector/: ImportUnitTests.h  bitvec_and.c  bitvec_clear.c  bitvec_clear_all.c  bitvec_clear_range.c  bitvec_clone.c  bitvec_cmpeq.c  bitvec_create.c  bitvec_nand.c  bitvec_nor.c  bitvec_not.c  bitvec_or.c  bitvec_peek.c  bitvec_pop.c  bitvec_push.c  bitvec_reserve.c  bitvec_resize.c  bitvec_set.c  bitvec_set_all.c  bitvec_set_equal.c  bitvec_set_range.c  bitvec_shl.c  bitvec_shr.c  bitvec_xnor.c  bitvec_xor.c  drop_in_replacements.c  drop_in_replacements.h  helpers.h
Source/Tests/Containers/Vector/: IntegerVector.c  StructVector.c
